# slack_rotation_action

./: .flake8  .gitignore  .yamllint.yml  LICENSE  README.md  action.yaml  goalies_fixed_full.txt  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: pr.yaml
goaliebot/: main.py  rotation_entry.py
goaliebot/core/: file_ops.py  models.py  parser.py
goaliebot/goaliebot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
goaliebot/notifier/: notify.py  slack_helpers.py  summary.py
goaliebot/rotation/: models.py  parser.py
goaliebot/slack_api/: __init__.py
goaliebot/slack_orchestrator/: command_runner.py  slack_helpers.py  summary.py
goaliebot/tests/: test_file_ops.py  test_rotation_entry.py
scripts/: setup.py
scripts/goalie/: goalie_manager.py
scripts/goalie/utils/: file_ops.py  slack_api.py  types.py
scripts/tests/: test_goalie_manager.py
src/goaliebot/: rotation_entry.py
src/goaliebot/core/: file_ops.py  models.py
src/goaliebot/operations/: summary.py
src/goaliebot/slack_api/: channel.py  messaging.py  usergroup.py
src/goaliebot/tests/: test_file_ops.py  test_rotation_entry.py
